@@ -26,16 +26,21 @@ pub enum ClientError {
     },
     #[error("Error retrieving HTTP response")]
     ResponseError { source: Box<dyn StdError> },
+    #[error("Error parsing server response as UTF-8")]
+    ResponseConversionError {
+        source: Box<dyn StdError>,
+        content: Vec<u8>,
+    },
     #[error("Error parsing HTTP response")]
     ResponseParseError {
         source: Box<dyn StdError>,
-        content: Vec<u8>,
+        content: String,
     },
     #[error("Server returned error")]
     ServerResponseError {
         url: String,
         code: u16,
-        content: Vec<u8>,
+        content: Option<String>,
     },
     #[error("Error parsing URL")]
     UrlParseError { source: ParseError, url: String },
