@@ -7,6 +7,11 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+
+### Changed
+- Response errors try to parse content to be UTF-8 encoded strings instead of raw bytes
+- Successul response codes updated to an inclusive range of 200-208
+
 ## [0.0.1] - 2021-04-24
 
 ### Added
